--- a/package.json
+++ b/package.json
@@ -1,15 +1,34 @@
 {
-  "name": "client-side",
+  "name": "new",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@testing-library/jest-dom": "^5.16.4",
-    "@testing-library/react": "^13.1.1",
-    "@testing-library/user-event": "^13.5.0",
-    "react": "^18.1.0",
-    "react-dom": "^18.1.0",
-    "react-scripts": "5.0.1",
-    "web-vitals": "^2.1.4"
+    "@material-ui/core": "^4.12.3",
+    "@material-ui/icons": "^4.11.2",
+    "@reduxjs/toolkit": "^1.7.2",
+    "@testing-library/jest-dom": "^5.11.4",
+    "@testing-library/react": "^11.1.0",
+    "@testing-library/user-event": "^12.1.10",
+    "axios": "^0.25.0",
+    "bootstrap": "^5.1.3",
+    "react": "^17.0.2",
+    "react-bootstrap": "^2.2.2",
+    "react-dom": "^17.0.2",
+    "react-loader-spinner": "^6.0.0-0",
+    "react-paginate": "^8.1.2",
+    "react-redux": "^7.2.6",
+    "react-router-dom": "5.3",
+    "react-scripts": "4.0.3",
+    "react-spinners": "^0.11.0",
+    "react-star-ratings": "^2.3.0",
+    "react-stripe-checkout": "^2.6.3",
+    "react-toastify": "^8.2.0",
+    "reactjs-popup": "^2.0.5",
+    "redux-persist": "^6.0.0",
+    "styled-components": "^5.3.3",
+    "timeago.js": "^4.0.2",
+    "typewriter-effect": "^2.18.2",
+    "web-vitals": "^1.0.1"
   },
   "scripts": {
     "start": "react-scripts start",
