--- a/package.json
+++ b/package.json
@@ -10,9 +10,10 @@
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
     "axios": "^0.25.0",
-    "bootstrap": "^5.1.3",
+    "bootstrap": "^5.3.0",
+    "jspdf": "^2.5.1",
     "react": "^17.0.2",
-    "react-bootstrap": "^2.2.2",
+    "react-bootstrap": "^2.7.4",
     "react-dom": "^17.0.2",
     "react-loader-spinner": "^6.0.0-0",
     "react-paginate": "^8.1.2",
