--- a/package.json
+++ b/package.json
@@ -3,8 +3,11 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@material-ui/core": "^4.12.3",
+    "@material-ui/core": "^4.11.4",
+    "@material-ui/data-grid": "^4.0.0-alpha.29",
     "@material-ui/icons": "^4.11.2",
+    "@mui/styled-engine-sc": "^5.12.0",
+    "@mui/x-data-grid": "^6.8.0",
     "@reduxjs/toolkit": "^1.7.2",
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
@@ -14,6 +17,7 @@
     "jspdf": "^2.5.1",
     "react": "^17.0.2",
     "react-bootstrap": "^2.7.4",
+    "react-data-grid": "^7.0.0-beta.34",
     "react-dom": "^17.0.2",
     "react-loader-spinner": "^6.0.0-0",
     "react-paginate": "^8.1.2",
@@ -26,7 +30,7 @@
     "react-toastify": "^8.2.0",
     "reactjs-popup": "^2.0.5",
     "redux-persist": "^6.0.0",
-    "styled-components": "^5.3.3",
+    "styled-components": "^5.3.11",
     "timeago.js": "^4.0.2",
     "typewriter-effect": "^2.18.2",
     "web-vitals": "^1.0.1"
